--- a/Lista de Exercicios/Ex17/index.html
+++ b/Lista de Exercicios/Ex17/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="clicou()" style="width: 200px; height:100px; font-size: 20px">Clique em mim</button>
+    <button onclick="limpar()" style="width: 200px; height:100px; font-size: 20px">Limpar</button>
+    <section id="resultado">
+        O resultado vem aqui...
+    </section>
     <script src="./sorteadorDeNum.js"></script>
 </body>
 </html>
