--- a/Lista de Exercicios/Ex18/index.html
+++ b/Lista de Exercicios/Ex18/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Jogo da adivinhação ! </h1>
+    <button onclick="clicou()"  id="btnJ" style="width: 200px; height:100px; font-size: 20px">Clique em mim</button>
+    <button onclick="resetar()" style="width: 200px; height:100px; font-size: 20px">Jogar novamente</button>
+    <section style="font-size: 20px; font-family: 'Courier New', Courier, monospace; font-weight: 500; " id="resultado">
+        <p>O resultado vem aqui...</p>
+    </section>
     <script src="./jogoDaAdvinhacao.js"></script>
 </body>
 </html>
