--- a/Lista de Exercicios/Ex28/index.html
+++ b/Lista de Exercicios/Ex28/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <button onclick="clicou()"  id="btnJ" style="width: 200px; height:100px; font-size: 20px">Clique para iniciar</button>
+    <section style="font-size: 20px; font-family: 'Courier New', Courier, monospace; font-weight: 500; " id="resultado">
+        <p>O resultado vem aqui...</p>
+    </section>
     <script src="./fatorialDeUmNum.js"></script>
 </body>
 </html>
